// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameInfoBar renders 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  />
  <View>
    <Text>
      Score: 
      0
    </Text>
  </View>
</View>
`;

exports[`score displays and updates correctly 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  />
  <View>
    <Text>
      Score: 
      40200
    </Text>
  </View>
</View>
`;

exports[`score displays and updates correctly 2`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  />
  <View>
    <Text>
      Score: 
      40300
    </Text>
  </View>
</View>
`;
